--- a/css/textae.css
+++ b/css/textae.css
@@ -1,14 +1,22 @@
+html, body {
+    margin: 0;
+    height: 100%;
+}
+
 #textae_container {
-    position:static;
-    left: 0px;    
+    position: relative;
+    left: 0px;
+    height: 600px;
     border: 1px solid black;
     font-family: verdana, arial, helvetica, sans-serif;
 }
 
 #header {
-    width: 65em;
+    position: absolute;
+    top: 0px;
+
+    width: 90%;
     height: 20px;
-    padding: 0px;
     border-left: 5px solid #555588;
     opacity: 0.9;
 
@@ -23,125 +31,14 @@
     filter: progid:DXImageTransform.Microsoft.Gradient(StartColorStr='#BBBBEE', EndColorStr='#FFFFFF', GradientType=1);
 }
 
-#title {
-    display: inline-block;
-    margin-left: 1px;
-    margin-right: 10px;
-    font-weight:bold;
-    text-shadow: 2px 2px 5px #555555;
-}
-
-#title a {
-    text-decoration: none;
-}
-
-.icon_bar {
-    display: inline-block;
-    margin: 0 10px;
-    padding: 0px;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -o-user-select: none;
-    user-select: none;
-
-}
-
-.separator {
-    display: inline-block;
-    margin: 2px;
-    height:100%;
-    border: 2px solid #AAAADD;
-}
-
-.icon {
-    display: inline-block;
-    cursor: pointer;
-    border: solid 0px #ff0000;
-    height: 16px;
-    width: 16px;
-    text-align: right;
-    vertical-align: top;
-    font-size: x-small;
-    background-repeat: no-repeat;
-    background-position: top right;
-    background-color: transparent;    
-}
-
-.icon.disabled {
-    cursor: auto;
-    opacity: 0.3;
-}
-
-.icon.pushed {
-    cursor: auto;
-    -moz-box-shadow:    inset 1px 1px 3px #000000;
-    -webkit-box-shadow: inset 1px 1px 3px #000000;
-    box-shadow:         inset 1px 1px 3px #000000;
-}
-
-#btn_read {
-    background: url("../images/btn_read_16.png");
-}
-
-#btn_write {
-    background: url("../images/btn_write_16.png");
-}
-
-#btn_undo {
-    background: url("../images/btn_undo_16.png");
-    text-align: right;
-}
-
-#btn_redo {
-    background: url("../images/btn_redo_16.png");
-    text-align: left;
-}
-
-#btn_replicate {
-    background: url("../images/btn_replicate_16.png");
-}
-
-#btn_replicate_auto {
-    background: url("../images/btn_replicate_auto_16.png");
-}
-
-#btn_entity {
-    background: url("../images/btn_denote_16.png");
-}
-
-#btn_pallet {
-    background: url("../images/btn_pallet_16.png");
-}
-
-#btn_new_label {
-    background: url("../images/btn_new_label_16.png");
-}
-
-#btn_delete {
-    background: url("../images/btn_delete_16.png");
-}
-
-#btn_copy {
-    background: url("../images/btn_copy_16.png");
-}
-
-#btn_paste {
-    background: url("../images/btn_paste_16.png");
-}
-
-#btn_help {
-    background: url("../images/btn_help_16.png");
-}
-
-#btn_about {
-    background: url("../images/btn_about_16.png");
-}
 
 #footer {
-    opacity: 0.9;
-    width: 65em;
+    position: absolute;
+    bottom: 0px;
+
+    width: 90%;
     height: 20px;
+    opacity: 0.9;
 
     background-color: #DDDDFF;
     /* fallback (Opera) */
@@ -161,14 +58,24 @@
 }
 
 #body {
-    margin: 4px;
+    position: absolute;
+    top: 20px;
+    height: 540px;
+    margin: 0px 4px;
+    overflow-y: scroll;
 }
 
 #text_box {
     display: inline;
     line-height: 400%;
-    /*background-color: rgba(255,255,255,0.5);*/
 }
+
+#annotation_box{
+    position: absolute;
+    top: 0px;
+    left: 0px;
+}
+
 
 .block {
     display: block;
@@ -369,4 +276,122 @@ span.Sentence {
 
 #widgets {
     display:none;
+}
+
+
+/*== Elements inside the header ==*/
+
+#title {
+    display: inline-block;
+    margin-left: 1px;
+    margin-right: 10px;
+    font-weight:bold;
+    text-shadow: 2px 2px 5px #555555;
+}
+
+#title a {
+    text-decoration: none;
+}
+
+.icon_bar {
+    display: inline-block;
+    margin: 0 10px;
+    padding: 0px;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+
+}
+
+.separator {
+    display: inline-block;
+    margin: 2px;
+    height:100%;
+    border: 2px solid #AAAADD;
+}
+
+.icon {
+    display: inline-block;
+    cursor: pointer;
+    border: solid 0px #ff0000;
+    height: 16px;
+    width: 16px;
+    text-align: right;
+    vertical-align: top;
+    font-size: x-small;
+    background-repeat: no-repeat;
+    background-position: top right;
+    background-color: transparent;    
+}
+
+.icon.disabled {
+    cursor: auto;
+    opacity: 0.3;
+}
+
+.icon.pushed {
+    cursor: auto;
+    -moz-box-shadow:    inset 1px 1px 3px #000000;
+    -webkit-box-shadow: inset 1px 1px 3px #000000;
+    box-shadow:         inset 1px 1px 3px #000000;
+}
+
+#btn_read {
+    background: url("../images/btn_read_16.png");
+}
+
+#btn_write {
+    background: url("../images/btn_write_16.png");
+}
+
+#btn_undo {
+    background: url("../images/btn_undo_16.png");
+    text-align: right;
+}
+
+#btn_redo {
+    background: url("../images/btn_redo_16.png");
+    text-align: left;
+}
+
+#btn_replicate {
+    background: url("../images/btn_replicate_16.png");
+}
+
+#btn_replicate_auto {
+    background: url("../images/btn_replicate_auto_16.png");
+}
+
+#btn_entity {
+    background: url("../images/btn_denote_16.png");
+}
+
+#btn_pallet {
+    background: url("../images/btn_pallet_16.png");
+}
+
+#btn_new_label {
+    background: url("../images/btn_new_label_16.png");
+}
+
+#btn_delete {
+    background: url("../images/btn_delete_16.png");
+}
+
+#btn_copy {
+    background: url("../images/btn_copy_16.png");
+}
+
+#btn_paste {
+    background: url("../images/btn_paste_16.png");
+}
+
+#btn_help {
+    background: url("../images/btn_help_16.png");
+}
+
+#btn_about {
+    background: url("../images/btn_about_16.png");
 }
