--- a/css/textae.css
+++ b/css/textae.css
@@ -68,6 +68,7 @@ html, body {
 #text_box {
     display: inline;
     line-height: 400%;
+    z-index: 255;
 }
 
 #annotation_box{
@@ -134,10 +135,9 @@ html, body {
 
 }
 
-.span.selected {
-    background-color: rgba(88,88,0,0.6);
+.span.ui-selected {
+    background-color: rgba(55,55,0,0.6);
     color: #DDDDDD;
-    border-width: 1px 0px 1px 0px;
 }
 
 .grid {
@@ -145,7 +145,7 @@ html, body {
     border-style: solid;
     border-color: #DDDDAA;
     padding: 1px;
-    overflow: hidden;
+    overflow: visible;
 }
 
 .grid:hover {
@@ -154,28 +154,20 @@ html, body {
 
 .type {
     position: relative;
-    border-radius: 3px; /* CSS3 */
-    -moz-border-radius: 3px; /* Firefox */
-    -webkit-border-radius: 3px;  /* Safari,Chrome */
-    border-width: 1px 1px 1px 1px;
+    border-radius: 3px;
+    border-width: 1px;
     border-style: solid;
     background-color: #CCFFCC;
-    font-size: xx-small;
     text-align: center;
     white-space: nowrap;
     /*overflow: hidden;*/
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -o-user-select: none;
+    font-size: xx-small;
     user-select: none;
 }
 
-.instance_pane {
+.entity_pane {
     position: absolute;
-    top:-13px;
-    width: 100%;
-    background-color: yellow
+    top:-10px;
     text-align: center;
 }
 
@@ -300,6 +292,37 @@ span.Sentence {
     display:none;
 }
 
+.control {
+    font-size: x-small;
+}
+
+._jsPlumb_endpoint {
+    z-index: 0;
+}
+
+._jsPlumb_connector {
+    opacity:0.6;
+    z-index: 0;
+}
+
+._jsPlumb_overlay {
+    display:block;
+    white-space:nowrap;
+    font-size:x-small;
+    background-color:yellow;
+    opacity:0.6;
+    z-index: 0;
+}
+
+._jsPlumb_connector._jsPlumb_hover {
+    opacity: 1;
+    z-index: 1;
+}
+
+._jsPlumb_overlay._jsPlumb_hover {
+    opacity: 1;
+    z-index: 2;
+}
 
 /*== Elements inside the header ==*/
 
