--- a/css/textae.css
+++ b/css/textae.css
@@ -165,6 +165,16 @@ html, body {
     user-select: none;
 }
 
+.type_label {
+    width: 100%;
+    overflow: hidden;
+}
+
+.type_label:hover {
+    overflow: visible;
+}
+
+
 .entity_pane {
     position: absolute;
     top:-10px;
