move an input element for annotation.json to right of the icon bar.

--- a/css/textae.css
+++ b/css/textae.css
@@ -357,7 +357,10 @@ span.Sentence {
     -moz-user-select: none;
     -o-user-select: none;
     user-select: none;
+}
 
+#local_annotation_dialog {
+    display: inline-block;
 }
 
 .separator {
