--- a/css/textae.css
+++ b/css/textae.css
@@ -11,10 +11,7 @@ html, body {
     font-family: verdana, arial, helvetica, sans-serif;
 }
 
-#header {
-    position: absolute;
-    top: 0px;
-
+.textae-control {
     width: 90%;
     height: 20px;
     border-left: 5px solid #555588;
@@ -30,7 +27,6 @@ html, body {
     /* MSIE */
     filter: progid:DXImageTransform.Microsoft.Gradient(StartColorStr='#BBBBEE', EndColorStr='#FFFFFF', GradientType=1);
 }
-
 
 #footer {
     position: absolute;
@@ -59,7 +55,6 @@ html, body {
 
 #body {
     position: absolute;
-    top: 20px;
     height: 540px;
     margin: 0px 4px;
     overflow-y: scroll;
@@ -334,22 +329,18 @@ span.Sentence {
     z-index: 2;
 }
 
-/*== Elements inside the header ==*/
-
-#title {
-    display: inline-block;
-    margin-left: 1px;
-    margin-right: 10px;
+/*== Elements inside the textae_control ==*/
+.textae-control__title {
+    margin: 0px 10px 3px 1px;
     font-weight:bold;
     text-shadow: 2px 2px 5px #555555;
 }
 
-#title a {
+.textae-control__title a {
     text-decoration: none;
 }
 
-.icon_bar {
-    display: inline-block;
+.textae-control__icon-bar {
     margin: 0 10px;
     padding: 0px;
     -webkit-user-select: none;
@@ -361,12 +352,12 @@ span.Sentence {
 
 .separator {
     display: inline-block;
-    margin: 2px;
-    height:100%;
+    margin: 3px 2px 2px 2px;
+    height: 10px;
     border: 2px solid #AAAADD;
 }
 
-.icon {
+.textae-control__icon-bar__icon {
     display: inline-block;
     cursor: pointer;
     border: solid 0px #ff0000;
@@ -377,75 +368,76 @@ span.Sentence {
     font-size: x-small;
     background-repeat: no-repeat;
     background-position: top right;
-    background-color: transparent;    
+    background-color: transparent;
+    margin: 2px 3px 0px 3px;
 }
 
-.icon.disabled {
+.textae-control__icon-bar__icon--disabled {
     cursor: auto;
     opacity: 0.3;
 }
 
-.icon.pushed {
+.textae-control__icon-bar__icon--pushed {
     cursor: auto;
     -moz-box-shadow:    inset 1px 1px 3px #000000;
     -webkit-box-shadow: inset 1px 1px 3px #000000;
     box-shadow:         inset 1px 1px 3px #000000;
 }
 
-#btn_read {
+.textae-control__icon-bar__read-button {
     background: url("../images/btn_read_16.png");
 }
 
-#btn_write {
+.textae-control__icon-bar__write-button {
     background: url("../images/btn_write_16.png");
 }
 
-#btn_undo {
+.textae-control__icon-bar__undo-button {
     background: url("../images/btn_undo_16.png");
     text-align: right;
 }
 
-#btn_redo {
+.textae-control__icon-bar__redo-button {
     background: url("../images/btn_redo_16.png");
     text-align: left;
 }
 
-#btn_replicate {
+.textae-control__icon-bar__replicate-button {
     background: url("../images/btn_replicate_16.png");
 }
 
-#btn_replicate_auto {
+.textae-control__icon-bar__replicate-auto-button {
     background: url("../images/btn_replicate_auto_16.png");
 }
 
-#btn_entity {
+.textae-control__icon-bar__entity-button {
     background: url("../images/btn_denote_16.png");
 }
 
-#btn_pallet {
+.textae-control__icon-bar__pallet-button {
     background: url("../images/btn_pallet_16.png");
 }
 
-#btn_new_label {
+.textae-control__icon-bar__new-label-button {
     background: url("../images/btn_new_label_16.png");
 }
 
-#btn_delete {
+.textae-control__icon-bar__delete-button {
     background: url("../images/btn_delete_16.png");
 }
 
-#btn_copy {
+.textae-control__icon-bar__copy-button {
     background: url("../images/btn_copy_16.png");
 }
 
-#btn_paste {
+.textae-control__icon-bar__paste-button {
     background: url("../images/btn_paste_16.png");
 }
 
-#btn_help {
+.textae-control__icon-bar__help-button {
     background: url("../images/btn_help_16.png");
 }
 
-#btn_about {
+.textae-control__icon-bar__about-button {
     background: url("../images/btn_about_16.png");
 }
