--- a/src/css/textae-control.css
+++ b/src/css/textae-control.css
@@ -1,9 +1,16 @@
 .textae-control {
     position: fixed;
-    width: 90%;
-    height: 20px;
+    margin-left: 2px;
+
+    box-sizing:border-box;
+    width: 510px;
+    height: 28px;
     border-left: 5px solid #555588;
-    opacity: 0.9;
+    border-right: 5px solid #555588;
+    box-shadow: 6px 6px 6px 6px rgba(0,0,0,0.4);
+    z-index: 1;
+    border-radius: 15px;
+    padding: 4px 0 0 10px;
 
     background-color: #BBBBEE;
     /* fallback (Opera) */
@@ -14,6 +21,108 @@
     background: -webkit-gradient(linear,  left top, right top, from(#BBBBEE), to(#FFFFFF));
     /* MSIE */
     filter: progid:DXImageTransform.Microsoft.Gradient(StartColorStr='#BBBBEE', EndColorStr='#FFFFFF', GradientType=1);
+}
+
+/*== Elements inside the textae_control ==*/
+.textae-control__title {
+    margin: 0 10px 0 0;
+    font-weight: bold;
+    text-shadow: 2px 2px 5px #555555;
+    font-size: 20px;
+    vertical-align: bottom;
+ }
+
+.textae-control__title a {
+    text-decoration: none;
+}
+
+.textae-control__separator {
+    margin: 0 2px;
+    height: 10px;
+    border: 2px solid #AAAADD;
+}
+
+.textae-control__icon {
+    cursor: pointer;
+    display: inline-block;
+    height: 16px;
+    width: 16px;
+
+    background-repeat: no-repeat;
+    background-position: bottom;
+    background-size: 16px 16px;
+
+    margin: 0 4px;
+}
+
+.textae-control__icon--disabled {
+    cursor: auto;
+    opacity: 0.3;
+}
+
+.textae-control__icon--pushed {
+    cursor: auto;
+    -moz-box-shadow:    inset 1px 1px 3px #000000;
+    -webkit-box-shadow: inset 1px 1px 3px #000000;
+    box-shadow:         inset 1px 1px 3px #000000;
+}
+
+.textae-control__read-button {
+    background: url("../images/btn_read_16.png");
+}
+
+.textae-control__write-button {
+    background: url("../images/btn_write_16.png");
+}
+
+.textae-control__undo-button {
+    background: url("../images/btn_undo_16.png");
+    text-align: right;
+}
+
+.textae-control__redo-button {
+    background: url("../images/btn_redo_16.png");
+    text-align: left;
+}
+
+.textae-control__replicate-button {
+    background: url("../images/btn_replicate_16.png");
+}
+
+.textae-control__replicate-auto-button {
+    background: url("../images/btn_replicate_auto_16.png");
+}
+
+.textae-control__entity-button {
+    background: url("../images/btn_denote_16.png");
+}
+
+.textae-control__pallet-button {
+    background: url("../images/btn_pallet_16.png");
+}
+
+.textae-control__new-label-button {
+    background: url("../images/btn_new_label_16.png");
+}
+
+.textae-control__delete-button {
+    background: url("../images/btn_delete_16.png");
+}
+
+.textae-control__copy-button {
+    background: url("../images/btn_copy_16.png");
+}
+
+.textae-control__paste-button {
+    background: url("../images/btn_paste_16.png");
+}
+
+.textae-control__help-button {
+    background: url("../images/btn_help_16.png");
+}
+
+.textae-control__about-button {
+    background: url("../images/btn_about_16.png");
 }
 
 .textae-control__about {
@@ -32,117 +141,4 @@
     padding: 4px;
     z-index: 255;
     font-size: small;
-}
-
-/*== Elements inside the textae_control ==*/
-.textae-control__title {
-    margin: 0px 10px 3px 1px;
-    font-weight:bold;
-    text-shadow: 2px 2px 5px #555555;
-}
-
-.textae-control__title a {
-    text-decoration: none;
-}
-
-.textae-control__icon-bar {
-    margin: 0 10px;
-    padding: 0px;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -o-user-select: none;
-    user-select: none;
-}
-
-.textae-control__icon-bar__separator {
-    display: inline-block;
-    margin: 3px 2px 2px 2px;
-    height: 10px;
-    border: 2px solid #AAAADD;
-}
-
-.textae-control__icon-bar__icon {
-    display: inline-block;
-    cursor: pointer;
-    border: solid 0px #ff0000;
-    height: 16px;
-    width: 16px;
-    text-align: right;
-    vertical-align: top;
-    font-size: x-small;
-    background-repeat: no-repeat;
-    background-position: top right;
-    background-color: transparent;
-    margin: 2px 3px 0px 3px;
-}
-
-.textae-control__icon-bar__icon--disabled {
-    cursor: auto;
-    opacity: 0.3;
-}
-
-.textae-control__icon-bar__icon--pushed {
-    cursor: auto;
-    -moz-box-shadow:    inset 1px 1px 3px #000000;
-    -webkit-box-shadow: inset 1px 1px 3px #000000;
-    box-shadow:         inset 1px 1px 3px #000000;
-}
-
-.textae-control__icon-bar__read-button {
-    background: url("../images/btn_read_16.png");
-}
-
-.textae-control__icon-bar__write-button {
-    background: url("../images/btn_write_16.png");
-}
-
-.textae-control__icon-bar__undo-button {
-    background: url("../images/btn_undo_16.png");
-    text-align: right;
-}
-
-.textae-control__icon-bar__redo-button {
-    background: url("../images/btn_redo_16.png");
-    text-align: left;
-}
-
-.textae-control__icon-bar__replicate-button {
-    background: url("../images/btn_replicate_16.png");
-}
-
-.textae-control__icon-bar__replicate-auto-button {
-    background: url("../images/btn_replicate_auto_16.png");
-}
-
-.textae-control__icon-bar__entity-button {
-    background: url("../images/btn_denote_16.png");
-}
-
-.textae-control__icon-bar__pallet-button {
-    background: url("../images/btn_pallet_16.png");
-}
-
-.textae-control__icon-bar__new-label-button {
-    background: url("../images/btn_new_label_16.png");
-}
-
-.textae-control__icon-bar__delete-button {
-    background: url("../images/btn_delete_16.png");
-}
-
-.textae-control__icon-bar__copy-button {
-    background: url("../images/btn_copy_16.png");
-}
-
-.textae-control__icon-bar__paste-button {
-    background: url("../images/btn_paste_16.png");
-}
-
-.textae-control__icon-bar__help-button {
-    background: url("../images/btn_help_16.png");
-}
-
-.textae-control__icon-bar__about-button {
-    background: url("../images/btn_about_16.png");
 }
