--- a/src/css/textae.css
+++ b/src/css/textae.css
@@ -125,14 +125,16 @@
     border-radius: 4px;
     text-align: center;
     white-space: nowrap;
-    /*overflow: hidden;*/
     font-size: small;
-    user-select: none;
 }
 
 .type_label {
     width: 100%;
     overflow: hidden;
+    user-select: none; /* CSS3 */
+    -moz-user-select: none; /* Firefox */
+    -webkit-user-select: none; /* Safari、Chromeなど */
+    -ms-user-select: none; /* IE10かららしい */
 }
 
 .type_label:hover {
