Pull up a grid  over descendants spans of the according span. 1. Refactor a logic of renderer. 2. Add new function 'domSelector.grid.get'. 3. A function 'indexPositionXxx' is changed to 'positionUtils' that is called at use. 4. Rmove a function 'gridMouseHover' that is not work. 5. Tuning redraw that run at end of window-resize. 6. Fix comments.

--- a/src/css/textae.css
+++ b/src/css/textae.css
@@ -66,6 +66,7 @@
 }
 
 .textae-editor__grid {
+    position: absolute;
     border-width: 0px 1px;
     border-style: solid;
     border-color: #DDDDAA;
